added Amin button

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -30,6 +30,8 @@
 			<ul class="nav navbar-nav">
 				<li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#HomePage" >
 					<i class="fa fa-home"></i> Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="\">
+                    <i class="fa fa-reply" ></i> Main</a></li>
 				<li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BoardPage" role="tab">
 					<i class="fa fa-group"></i> Board</a></li>
 			</ul>
@@ -65,7 +67,9 @@
 							<label for="DocFile">PDF document to upload: </label>
 						</div>
 
-						<button type="submit" class="btn btn-primary mt-1 shadow-none">Upload Doc</button>
+						<button type="submit" class="btn btn-success shadow-none mt-1">
+							<i class="fa fa-upload me-1"></i> Upload Doc
+						</button>
 						<div id="FileUploadMessageDisplay" class="m-2"></div>
 					</form>
 				</div><!-- End of col 1 -->
@@ -132,7 +136,9 @@
 								</div>
 							</div>
 
-							<button type="submit" class="btn btn-primary m-2 shadow-none">Upload Photos</button>
+							<button type="submit" class="btn btn-success shadow-none m-2">
+								<i class="fa fa-upload me-1"></i> Upload Photos
+							</button>
 							<div id="PhotosUploadMessageDisplay" class="m-2"></div>
 						</form>
 
@@ -221,7 +227,9 @@
 									</div>
 								</div>
 					
-								<button type="submit" class="btn btn-primary">Update</button>
+								<button type="submit" class="btn btn-success shadow-none">
+									<i class="fa fa-floppy-o me-1"></i> Save Owner
+								</button>
 								<div id="BoardMessageDisplay" class="m-2"></div>
 
 								<div class="mb-2 form-floating">
