--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
                 <i class="fa fa-group"></i> Committees</a></li>
             <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-MediaType="1">
                 <i class="fa fa-camera" style="font-size: 1rem;"></i> Photos</a></li>
+            <li class="nav-item"><a class="nav-link" href="/admin">
+                <i class="fa fa-user-circle"></i> Admin</a></li>
         </ul>
     </div>
 </nav>
@@ -100,14 +102,6 @@
 
                 <div id="PresidentWebsiteMessage" class="mt-4 mb-2"></div>
                 <div id="EventPhotos" class="mt-4 mb-2"></div>
-                <!--
-                <div class="float-start d-none d-sm-block my-3">
-                    <i class="fa fa-home fa-4x float-start"></i>
-                    <h4>
-                    The Gander Road Homeowners Association spring Garage Sale is this Saturday (5/18/2024) from 9:00am-to-03:00pm.
-                </h4>
-                </div>
-                -->
 
                 <div class="float-start d-none d-sm-block my-3">
                     You have found the web site of the Gander Road Homeowners Association.
@@ -133,8 +127,6 @@
                     <img id="CurrentPhoto" src="https://grhawebstorage.blob.core.windows.net/photos/2012-07-10 092.JPG" class="rounded float-start m-2"  width="80%" alt="gander road current photo"/>
                 </div>
                 <div>
-                    <!--
-                    -->
                     <iframe class="d-none d-sm-block m-2"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24513.756036534407!2d-84.10968!3d39.824496!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884082af06f73537%3A0xa54a509114e629c1!2s5001%20Gander%20Rd%20W%2C%20Dayton%2C%20OH%2045424!5e0!3m2!1sen!2sus!4v1653571086503!5m2!1sen!2sus" 
                     width="85%" frameborder="0" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
