--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -228,7 +228,7 @@
 								</div>
 					
 								<button type="submit" class="btn btn-success shadow-none">
-									<i class="fa fa-floppy-o me-1"></i> Save Owner
+									<i class="fa fa-floppy-o me-1"></i> Update Trustee
 								</button>
 								<div id="BoardMessageDisplay" class="m-2"></div>
 
