Re-factored load of Board info

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
                     -->
                     <img id="HomePhoto" class="rounded mb-2 ml-2" src="https://grhawebstorage.blob.core.windows.net/images/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
                 </div>
+                <div id="BoardMessageDisplay" class="mt-2 mb-2"></div>
                 President <b><span class="PresidentName"></span></b>
                 <span class="PresidentPhone"></span>
                 <br>email: <a class="PresidentEmail" href=""></a>
