--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,9 @@
                     <i class="fa fa-info fa-2x float-start"></i> Welcome <br>message</a>
                 <a class="btn btn-info mt-2 link-tile" href="#meetingModal" data-bs-toggle="modal">
                     <i class="fa fa-group fa-2x float-start"></i> Monthly <br>meetings</a>
-                <button class="btn btn-success mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4">
+                <button class="btn btn-success mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4" data-Category="Governing Docs">
                     <i class="fa fa-legal fa-2x float-start"></i> Covenants <br>and By Laws</button>
-                <button class="btn btn-danger mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4">
+                <button class="btn btn-danger mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4" data-Category="Governing Docs">
                     <i class="fa fa-bank fa-2x float-start"></i> Architecture <br>and Zoning</button>
                 <a class="btn btn-primary mt-2 link-tile" href="#eventModal" data-bs-toggle="modal">
                     <i class="fa fa-calendar fa-2x float-start"></i> Events / <br>Calendar</a>
