updated dues reports

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -143,8 +143,15 @@
 							<button id="UnpaidDuesRankingReport" data-reportTitle="Unpaid Dues Ranking Report"
 								type="button" role="button" class="btn btn-warning reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-bank"></i> Unpaid Dues Rank
+
 							</button>
 
+							<button id="DuesletterReport" data-reportTitle="Dues Letter Mailing List"
+								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
+								<i class="fa fa-envelope"></i> Dues Letter Mailing List
+							</button>
+
+							<!--
 							<button id="Duesletter1Report" data-reportTitle="Dues Letter 1st Notice Mailing List"
 								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-envelope"></i> Dues Letter 1st Notice
@@ -153,6 +160,7 @@
 								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-envelope"></i> Dues Letter 2nd Notice
 							</button>
+							-->
 							<div id="ReportsMessageDisplay" class="m-2"></div>
 
 					</div>
